fix: cleanup, language features